--- a/index.html
+++ b/index.html
@@ -55,25 +55,27 @@
 </head>
 <body>
   <header>
-    <h1>O Segredo da Radiância Sem Idade</h1>
-<p>Descubra o <strong>Ebook de Rejuvenescimento LuminaSkin™</strong> – o guia da mulher britânica para restaurar juventude, brilho e confiança em tempo recorde. Rituais de beleza de luxo. Ciência comprovada. Sem enrolação.</p>
-<a href="https://YOUR_GUMROAD_OR_PAYHIP_LINK" class="btn">Acesso Instantâneo</a>
-</header>
+        <h1>The Secret to Ageless Radiance</h1>
+    <p>Discover the <strong>LuminaSkin™ Rejuvenation Ebook</strong> – the British woman’s blueprint to restoring youth, glow, and confidence in record time. Luxury beauty rituals. Proven science. No fluff.</p>
+    <a href="https://moonbeatrice.gumroad.com/l/pussw" class="btn">Get Instant Access</a>
+  </header>
 
-<section>
-  <h2>Por Que Mulheres Acima de 40 Estão Encantadas</h2>
-  <p>Porque funciona. Aqui, você vai descobrir como suavizar linhas, firmar a pele e recuperar seu brilho – sem gastar milhares em tratamentos invasivos. Combine com os produtos LuminaSkin™ e veja o espelho se tornar seu melhor amigo novamente.</p>
-</section>
+  <section>
+    <h2>Why Women Over 40 Are Raving About This</h2>
+    <p>Because it works. Inside, you’ll uncover how to smooth lines, tighten skin, and reclaim your glow – without wasting thousands on invasive treatments. Pair it with LuminaSkin™ products and watch the mirror become your best friend again.</p>
+  </section>
 
-<section>
-  <h2>O Que Você Recebe</h2>
-  <p>✔ Rotina de rejuvenescimento passo a passo<br>
-     ✔ Segredos que dermatologistas não querem que você saiba<br>
-     ✔ Truques de luxo anti-idade feitos para mulheres britânicas<br>
-     ✔ Resultados rápidos que você realmente vai notar</p>
-  <a href="https://YOUR_GUMROAD_OR_PAYHIP_LINK" class="btn">Baixar Agora</a>
-</section>
+  <section>
+    <h2>What You Get</h2>
+    <p>✔ Step-by-step rejuvenation routine<br>
+       ✔ Secrets dermatologists don’t want you to know<br>
+       ✔ Luxury anti-ageing hacks tailored for British women<br>
+       ✔ Fast results that you can actually see</p>
+    <a href="https://moonbeatrice.gumroad.com/l/pussw" class="btn">Download Now</a>
+  </section>
 
-<footer>
-  <p>© 2025 LuminaSkin™ | Todos os Direitos Reservados</p>
-</footer>
+  <footer>
+    <p>© 2025 LuminaSkin™ | All Rights Reserved</p>
+  </footer>
+</body>
+</html>	
